--- a/src/styles.css
+++ b/src/styles.css
@@ -37,8 +37,8 @@ body {
 .appRoot {
   height: 100dvh;
   display: grid;
-  grid-template-rows: 56px 1fr;
-  gap: 12px;
+  grid-template-rows: 45px 1fr;
+  gap: 0px;
   padding: 12px;
   box-sizing: border-box;
   overflow: hidden;
@@ -46,6 +46,7 @@ body {
 
 /* Topbar */
 .topBar {
+  
   display: grid;
   grid-template-columns: auto 1fr auto;
   align-items: center;
@@ -106,10 +107,11 @@ body {
 /* Main grid */
 .mainGrid {
   display: grid;
-  grid-template-columns: 304px 1fr 382px;
+  grid-template-columns: 270px 1fr 300px;
   gap: 10px;
   overflow: hidden;
   min-height: 0;
+  
 }
 
 /* Panels */
@@ -377,7 +379,7 @@ body {
 }
 
 /* Sections like ref */
-.insSection { margin-top: 12px; }
+.insSection { margin-top: 25px; }
 
 .insSectionHead {
   width: 100%;
@@ -898,7 +900,7 @@ input[type="number"] { -moz-appearance: textfield; }
 }
 
 .assetsFooter {
-  margin-top: auto;
+  margin-top: 25px;
   flex: 0 0 auto;
   padding: 16px 24px 24px 24px;
   background: transparent;
